[FIX] Reworking the lib for TEK 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,4 @@
-*~
-*.c#
 *.o
-src/*.c~
-src/*.c#
-src/*.o
-/coding-style-checker/
-.log
-.out
-test/
-bsq
-Book1ThePhilosophersStone.txt
-/lib/Book1ThePhilosophersStone.txt
-/lib/Makefile
-/lib/.git/
-build.sh
-a.out
-*.code-workspace
-lib/coding-style-checker/
-lib/coding-style-reports.log
-coding-style-reports.log
-src/
-compilation.sh
-
+*~
+*#
+coding-style*
